test/classes/ferguson/delete-free/unique2.good
unique2.chpl:9: In function 'foo':
unique2.chpl:12: error: copy-initialization invoked for a type that does not have a copy initializer
